--- a/frontend/test/index.html
+++ b/frontend/test/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>Mocha</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mocha.css" />
+    <meta charset="utf-8"/>
+    <title>Backbone Tests</title>
+    <link rel="stylesheet" href="mocha.css"/>
   </head>
   <body>
     <div id="mocha"></div>
-    <script src="mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
-    <script src="tests.js"></script>
-    <script>
-      mocha.run();
-    </script>
+    <script data-main="specRunner.js" src="../node_modules/requirejs/require.js"></script>
   </body>
 </html>
